[gd_scene load_steps=4 format=3 uid="uid://cwafyr3pn0ml7"]

[ext_resource type="Script" uid="uid://dk81m0uwqbeqv" path="res://Scripts/win_screen.gd" id="1_a00f1"]
[ext_resource type="FontFile" uid="uid://d3voj87xta0rd" path="res://Assets/Font/Minecraft.ttf" id="1_l5sol"]
[ext_resource type="AudioStream" uid="uid://bf58nr7tepnd8" path="res://Assets/Sound/click.wav" id="3_awi1s"]

[node name="WinScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -648.0
offset_top = -365.0
offset_right = -504.0
offset_bottom = -284.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72, 40.5)
script = ExtResource("1_a00f1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.022000002
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.7820002
pivot_offset = Vector2(72, 40.5)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_right = 36.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_l5sol")
text = "You won!"

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 54.0
offset_right = 146.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(34, 12)
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_l5sol")
text = "Next"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = 54.0
offset_right = 63.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(34, 12)
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_l5sol")
text = "Main"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_awi1s")
pitch_scale = 3.0

[connection signal="mouse_entered" from="NextLevelButton" to="." method="_on_next_level_button_mouse_entered"]
[connection signal="mouse_exited" from="NextLevelButton" to="." method="_on_next_level_button_mouse_exited"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="mouse_entered" from="MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="MainMenuButton" to="." method="_on_main_menu_button_mouse_exited"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
